styles.css
/* ... */
.disclaimer {
  text-align: center;
  background: black;
  width: 100%;
  font-size: 12px;
  padding: .7rem 0;
  color: white;
  font-weight: 400;
  letter-spacing: .1rem;
}

.disclaimer a {
  color: rgb(239, 187, 57);
}

.skillshares-left {
  font-weight: 900;
}

.hero-images {
  margin: 2rem 7rem;
  background-image: url('images/pexels-picha-stock-2210122-3894378.jpg');
  background-position: -110% 55%;
  background-size: cover;
  height: 40.5rem;
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
}

.hero-images article {
  padding-left: 4rem;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  width: 39.5%;
  margin-bottom: 7.5rem;
  color: #fff;
}

.hero-images article h2 {
  font-size: 3.25rem;
  padding-bottom: 2rem;
}

.hero-images article p {
  font-weight: 600;
  font-size: 1.25rem;
  line-height: 1.5;
  color: #fff;
  padding-bottom: 2.75rem;
  text-shadow: 1px 1px 1px black;
}

.hero-images article a {
  border: 1px solid #fff;
  text-align: center;
  width: 60%;
  padding: 1.5rem 2.1rem;
  color: #fff;
  font-size: 1.65rem;
  background-image: linear-gradient(to right, rgb(22, 30, 84, .3), rgb(22, 30, 84, 1));
  opacity: .85;
  letter-spacing: .1rem;
}

.nav-bar {
  display: flex;
  justify-content: center;
  top: 0;
  position: sticky;
  z-index: 10;
  margin: 0;
  padding: 0 5rem;
  animation-timeline: view();
  animation-range-start: 1000px;
  animation: color-add 3s ease-in forwards;
}

.nav-bar a:active, .nav-bar a:visited, .nav-bar a:link {
   color: #ccc;
}

@keyframes color-add {
 from {
    background-color: transparent;
  }
  to {
    background-color: #161E54;
  }
}

.nav-bar-tabs {
  display: flex;
  gap: 1rem;
}

.nav-tab {
  width: 12.5rem;
  margin: .3rem 0;
  font-size: 1rem;
  letter-spacing: 2px;
  text-align: center;
}

.nav-bar-tabs .nav-tab:hover {
  text-decoration: underline;
}

hr {
  margin: 0;
}

.softsolves-intro {
  text-align: center;
  padding: 5rem;
  color: white;
  font-weight: 700;
  font-size: xx-large;
  margin-top: 7rem;
  background-image: linear-gradient(to bottom, rgb(255, 152, 106, .5), rgb(255, 152, 106));
}

.softsolves-intro p {
  margin: auto;
  font-family: "Saira", sans-serif;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
  width: 80%;
  font-style: normal;
  font-size: 1.95rem;
  line-height: 180%;
  padding-bottom: 2.5rem;
}

.softsolves-services {
  height: 160vh;
}

.softsolves-services .content-container {
  width: 20vw;
  display: flex;
  flex-direction: row;
  position: relative;
  padding: 5rem;
}

.softsolves-services .cards-container-row-one,
.softsolves-services .cards-container-row-two,
.softsolves-services .cards-container-row-three {
  display: flex;
  width: 60%;
}

.softsolves-services .cards-container-row-one .text-content{
  z-index: 9;
}

.softsolves-services .cards-container-row-two {
  justify-content: center;
  position: relative;
  bottom: 10rem;
  z-index: 1;
}

.softsolves-services .cards-container-row-three {
   position: relative;
  bottom: 20rem;
}

.services-heading, .processes-heading {
  text-align: center;
  padding: 4rem 0rem;
}

.softsolves-services .content-container .dotted-line,
.softsolves-services .content-container .text-content {
  width: 80%;
  padding-bottom: 2rem;
}

.dotted-line {
  border: 1.5px dotted;
  width: 90%;
  border-image-slice: 1;
  border-width: 5px;
  height: 10rem;
}

.softsolves-services .content-container .dotted-line {
  padding: 1rem;
  border-width: 1.5px;
  height: 12rem;
  max-height: 15rem;
}

.softsolves-services .content-container .text-content {
  width: 20vw;
  background-image: linear-gradient(to bottom, rgb(255, 255, 255), rgb(235, 201, 113, 1));
  border-radius: .5rem;
  padding: 1.5rem .5rem;
  right: 18rem;
  top: 5.6rem;
  position: absolute;
  bottom: calc(13% + 10px);
  left: 23%;
}

.softsolves-services .content-container .text-content h3 {
  padding-top: 1.5rem;
  font-weight: 700;
}

.softsolves-services .content-container .text-content p {
  padding-top: 1.25rem;
  line-height: 1.25;
}

.service-process .process-content {
  display: flex;
  gap: 2rem;
  justify-content: center;
  align-items: center;
  color: #fff;
  background-color: #151d54;
  padding: 5.5rem 0 6rem 0;
}

.service-process .cta-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 40%;
}

.service-process .cta-section img {
  border-radius: .6rem;
  width: 75%;
  margin-bottom: 2rem;
}

.service-process .cta-section a {
  padding: 1rem 4rem;
  background-image: linear-gradient(to right, rgb(177, 178, 181, .7), rgb(21, 29, 84));
  border: 2px solid #fff;
  opacity: 75%;
  color: #fff;
  font-weight: 700;
  text-align: center;
  font-size: larger;
  margin-bottom: .5rem;
}

.service-process .process-section {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  flex-direction: row-reverse;
  width: 40%;
}

.service-process .process-section .text-content {
  background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(235, 201, 113, .5));
  color: black;
  margin-bottom: 2rem;
  padding: 4rem 1rem 1.5rem 1rem;
  border-radius: .75rem;
  width: 60%;
}

.process-section .text-content h3 {
  display: flex;
  justify-content: flex-end;
  background-color: #ff986a;
  width: 110%;
  color: #fff;
  font-weight: 600;
  padding: .25rem 1.5rem .2rem 0;
  box-shadow: 2px 2px 2px  rgb(0, 0, 0, .2);
  margin-left: -2rem;
  margin-bottom: .75rem;
}

.softsolves-mission-statement .content-container {
  display: flex;
  padding: 5rem 0 10rem 0;
  gap: 18rem;
}

hr {
  border: .7px dashed black;
}

.softsolves-mission-statement .content-container .text-content {
  width: 40%;
  padding-left: 5rem;
  line-height: 1.35;
  text-align: justify;
}

.softsolves-mission-statement .content-container .text-content p {
  padding-bottom: 2rem;
}
/* ... */

